# fastapi_docker_template

./: .dockerignore  .env.example  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  docker-compose.prod.yml  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: ci.yml
app/: main.py
app/api/: health.py
app/api/v1/: auth.py  router.py  users.py
app/auth/: jwt.py  password.py
app/background/: tasks.py  worker.py
app/cache/: backend.py  decorator.py
app/core/: config.py  exceptions.py  logging_conf.py  responses.py
app/db/: session.py
app/dependencies/: auth.py  pagination.py
app/middleware/: logging.py  request_id.py
app/models/: user.py
app/repositories/: base.py  user.py
app/schemas/: common.py  user.py
app/services/: user.py
app/utils/: pagination.py
docker/: Dockerfile  docker-compose.prod.yml  docker-compose.yml
migrations/: env.py
migrations/versions/: 7bf64dd13efb_initial.py
scripts/: down.sh  migrate.sh  worker.sh
tests/: conftest.py  factories.py  test_auth.py  test_health.py  test_users.py
